fixed layout issues with height

--- a/portfolio-styles.css
+++ b/portfolio-styles.css
@@ -1,6 +1,7 @@
 body{
     margin:0;
     overflow-x:hidden;
+    height:100%;
 }
 
 .home{
@@ -11,7 +12,8 @@ body{
     background-position: center;
     display:flex;
     align-items: center;;
-    flex-direction:column;            
+    flex-direction:column;          
+    position: relative;  
 }
 
  .home::before {
@@ -169,10 +171,20 @@ h2{
 .bottom-home{
     
     display:flex;
-    align-items: center;
+    align-items: end;
     justify-content: space-between;
     width:1000px;
     animation: SlideIn 1.5s ease-in-out;
+    height:100%;
+    position: relative;
+    z-index: 3;
+}
+
+.about-me-button, .cv-button{
+    
+    height:500px;
+    display:flex;
+    align-items: center;
 }
 
 #about-me{
@@ -309,7 +321,7 @@ h2{
     top: 0;
     left: 0;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     background: rgba(0, 0, 0, 0.6);  
     z-index: 2;
 }
@@ -377,13 +389,14 @@ h2{
 
 .after-home{
     width:100%;
-    height:100vh;
+    min-height:100vh;
+    
     background-image:url('portfolio-background6.jpg');
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
-    
+    position: relative;
     margin-top:0;
 
 }
@@ -392,7 +405,7 @@ h2{
     content: '';
     position: absolute;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     background: rgba(0, 0, 0, 0.7);  
     z-index: 1;  
 }
@@ -429,8 +442,8 @@ h2{
 .about-me{
     position: relative;
     z-index: 2;
-    display:flex;
-    justify-content:center;
+    height:100%;
+
     
 }
 
@@ -446,6 +459,7 @@ h2{
 .about-s1{
     display:flex;
     justify-content: space-evenly;
+
 }
 
 
